# MCP

./: .gitignore  Info.md  Makefile  README.md  RESULTS_REPORT.md  hyperparameters.yaml  mcp.json  pyproject.toml
.cursor/: mcp.json
src/mini_mcp/: __init__.py  client.py  servers_launcher.py
src/mini_mcp/servers/: ai_server.py  gcp_server.py  slack_server.py  system_server.py
