[project]
name = "mini-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rayanramoul", email = "r.ramoul@instadeep.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cloudpathlib>=0.21.1",
    "libtmux>=0.46.2",
    "mcp[cli]>=1.9.4",
    "slack-sdk>=3.27.1",
]

[project.scripts]
mini-mcp = "mini_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
