[project]
name = "mini-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rayanramoul", email = "r.ramoul@instadeep.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cloudpathlib[gs]>=0.21.1",
    "libtmux>=0.46.2",
    "litellm>=1.72.6",
    "mcp[cli]>=1.9.4",
    "psutil>=7.0.0",
    "pync>=2.0.3",
    "slack-sdk>=3.27.1",
    "streamlit>=1.45.1",
]

[project.scripts]
mini-mcp = "mini_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
